[package]
name = "cedis"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
structopt = "0.3"
signal-hook = "0.1"
rustyline = "6.1.2"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.7"
